# gallery

./: .gitignore  Cargo.toml  TODO.md
migrations/2018-05-14-192339_create_images/: down.sql  up.sql
migrations/2018-05-14-193248_create_subjects/: down.sql  up.sql
migrations/2018-05-14-194708_create_imagesubjects/: down.sql  up.sql
migrations/2018-05-16-211330_tags/: up.sql
migrations/2018-05-17-190304_image_tags/: down.sql  up.sql
src/: main.rs  model.rs  schema.rs  view.rs
templates/: index.html.tera
