[package]
name = "gallery"
version = "0.1.0"
authors = ["Vincent Kriek <vincent@kriek.org>"]

[dependencies]
quick-xml = "0.10.0"
rusqlite = "0.13.0"
rocket = "0.3.9"
rocket_codegen = "0.3.9"
libraw-sys = "0.1"
image = "0.19.0"
time = "0.1.40"
uuid = { version = "0.6", features = ["v4"] }
log = "0.4.0"
env_logger = "0.5.1"
serde = "1.0.55"
serde_derive = "1.0.55"

[dependencies.rocket_contrib]
version = "0.3.9"
default-features = false
features = ["tera_templates"]
