[package]
name = "gallery"
version = "0.1.0"
authors = ["Vincent Kriek <vincent@kriek.org>"]

[dependencies]
quick-xml = "0.10.0"
rocket = "0.3.9"
rocket_codegen = "0.3.9"
libraw-sys = "0.1"
image = "0.19.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "0.6", features = ["v4"] }
log = "0.4.0"
env_logger = "0.5.1"
serde = "1.0.55"
serde_derive = "1.0.55"
clap = "~2.31"
diesel = { version = "1.2.0", features = ["postgres", "chrono"] }
dotenv = "0.10"
rexiv2 = "0.6.0"

[dependencies.rocket_contrib]
version = "0.3.9"
default-features = false
features = ["tera_templates"]
